# binance-kafka-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  profiles.yml  pyproject.toml  requirements.txt  scheduler.py
analytics/: explore.ipynb  queries.sql
consumer/: kafka_consumer.py
dashboard/: dashboard.py
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/models/marts/: mart_volatility.sql  mart_vwap.sql  mart_whale_trades.sql  schema.yml
models/staging/: schema.yml  sources.yml  stg_onlcv_1min.sql  stg_trades.sql
producer/: binance_producer.py
