[project]
name = "binance-kafka-pipeline"
version = "0.1.0"
description = "Binance API -> Kafka → Python Consumer → DuckDB → dbt → analytics models"
requires-python = ">=3.11, <3.12"
dependencies = [
    "kafka-python==2.3.0",
    "confluent-kafka==2.13.2",
    "duckdb==1.4.4",
    "dbt-core==1.10.1",
    "dbt-duckdb==1.10.1",
    "pandas==2.2.2",
    "pyarrow==15.0.2",
    "requests==2.32.3",
    "python-dotenv==1.0.0",
    "websocket-client==1.9.0",
    "matplotlib>=3.10.8",
    "jupyterlab>=4.5.6",
    "streamlit>=1.56.0",
    "plotly>=6.6.0",
]
